fixing mobile view overflow

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ h1 {
     color: white;
     font-size: 7.2vw;
     line-height: 150%;
-    padding: 2% 5%;
+    padding: 2% 4%;
 }
 
 a {
